--- a/partie/pom.xml
+++ b/partie/pom.xml
@@ -14,6 +14,12 @@
             <version>7.5</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>scrabble-td2-darpa_g</groupId>
+            <artifactId>joueur</artifactId>
+            <version>1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <parent>
@@ -30,6 +36,19 @@
     <properties>
         <java.version>17</java.version>
     </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <mainClass>partie.Partie</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 
