--- a/anagrammeur/pom.xml
+++ b/anagrammeur/pom.xml
@@ -9,6 +9,11 @@
             <version>1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <parent>
