#32 Mise en place docker pour chaque modules
Co-Authored-By: Geoffrey <59085533+geoffreylalic@users.noreply.github.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,12 @@ services:
 install:
   - mvn clean install -DskipTests
 
+before_script:
+  - docker build anagrammeur -t scrabble:anagrammeur
+  - docker build appariement -t scrabble:appariement
+  - docker build partie -t scrabble:partie
+  - docker build joueur -t scrabble:joueur
+
 script:
   #- docker version
   #- echo "nb joueurs = $NB_JOUEURS "
@@ -40,6 +46,12 @@ script:
   - mvn exec:java
   - cd ..
   #- Lance un docker test d'anagrammeur
-  - docker build anagrammeur -t scrabble:anagrammeur
-  - docker run -d --name anagrammeur_test -e PORT="8084" -e LANCEMENT="POUR_LES_TEST" -p 8084:8084 scrabble:anagrammeur
+
+  # Précision des ports pas utile ?
+  #- docker run -d --name anagrammeur_test -e PORT="8080" -e LANCEMENT="POUR_LES_TEST" -p 8084:8084 scrabble:anagrammeur
+
+  - docker run -d --name anagrammeur_test scrabble:anagrammeur
+  - docker run -d --name appariement_test scrabble:appariement
+  - docker run -d --name partie_test scrabble:partie
+  - docker-compose up --scale joueur=4
 
