--- a/.travis.yml
+++ b/.travis.yml
@@ -16,12 +16,6 @@ services:
 install:
   - mvn clean install -DskipTests
 
-before_script:
-  #- docker build anagrammeur -t scrabble:anagrammeur
-  - docker build appariement -t scrabble:appariement
-  - docker build partie -t scrabble:partie
-  - docker build joueur -t scrabble:joueur
-
 script:
   #- docker version
   #- echo "nb joueurs = $NB_JOUEURS "
@@ -42,15 +36,20 @@ script:
   - mvn exec:java &
   - cd ../partie
   - mvn exec:java &
-  #- - cd ../anagrammeur
-  #- mvn exec:java &
+  - cd ../anagrammeur
+  - mvn exec:java &
   - cd ..
-  #- Lance un docker test d'anagrammeur
+
+  - docker build anagrammeur -t scrabble:anagrammeur
+  - docker build appariement -t scrabble:appariement
+  - docker build partie -t scrabble:partie
+  - docker build joueur -t scrabble:joueur
+  #- Lance les dockers
 
   # Précision des ports pas utile ?
   #- docker run -d --name anagrammeur_test -e PORT="8080" -e LANCEMENT="POUR_LES_TEST" -p 8084:8084 scrabble:anagrammeur
 
-  #- docker run -d --name anagrammeur_test scrabble:anagrammeur
+  - docker run -d --name anagrammeur_test scrabble:anagrammeur
   - docker run -d --name appariement_test scrabble:appariement
   - docker run -d --name partie_test scrabble:partie
   - docker-compose up --scale joueur=4
