--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,21 @@ script:
   #- mvn exec:java -Dexec.args="closingAtTheEnd" &
   #- cd ../joueur
   #- mvn exec:java
+
+  #Construction dockers
+  - docker build anagrammeur -t scrabble:anagrammeur
+  - docker build appariement -t scrabble:appariement
+  - docker build partie -t scrabble:partie
+  - docker build joueur -t scrabble:joueur
+  #- Lance les dockers
+
+  # Précision des ports pas utile ?
+  #- docker run -d --name anagrammeur_test -e PORT="8080" -e LANCEMENT="POUR_LES_TEST" -p 8084:8084 scrabble:anagrammeur
+  - docker run -d --name anagrammeur_test scrabble:anagrammeur
+  - docker run -d --name appariement_test scrabble:appariement
+  - docker run -d --name partie_test scrabble:partie
+  - docker-compose up --scale joueur=4
+
   - mvn test
   - cd appariement
   - mvn exec:java &
@@ -40,17 +55,5 @@ script:
   - mvn exec:java &
   - cd ..
 
-  - docker build anagrammeur -t scrabble:anagrammeur
-  - docker build appariement -t scrabble:appariement
-  - docker build partie -t scrabble:partie
-  - docker build joueur -t scrabble:joueur
-  #- Lance les dockers
 
-  # Précision des ports pas utile ?
-  #- docker run -d --name anagrammeur_test -e PORT="8080" -e LANCEMENT="POUR_LES_TEST" -p 8084:8084 scrabble:anagrammeur
-
-  - docker run -d --name anagrammeur_test scrabble:anagrammeur
-  - docker run -d --name appariement_test scrabble:appariement
-  - docker run -d --name partie_test scrabble:partie
-  - docker-compose up --scale joueur=4
 
