--- a/joueur/pom.xml
+++ b/joueur/pom.xml
@@ -35,7 +35,6 @@
     </parent>
 
 
-    <groupId>scrabble-td2-darpa_g</groupId>
     <artifactId>joueurApplication.joueur</artifactId>
     <version>1</version>
 
@@ -45,6 +44,11 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
