--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,8 @@ script:
   #- docker run -d --name anagrammeur_test scrabble:anagrammeur
   #- docker run -d --name appariement_test scrabble:appariement
   #- docker run -d --name partie_test scrabble:partie
-  - docker-compose up --scale joueur=4
+  
+  #- docker-compose up --scale joueur=4
 
   - mvn test
   - cd appariement
