--- a/anagrammeur/Dockerfile
+++ b/anagrammeur/Dockerfile
@@ -1,4 +1,6 @@
 FROM openjdk:17-jdk-slim
 ARG JAR_FILE=/target/anagrammeur-1.jar
 COPY ${JAR_FILE} anagrammeur.jar
+RUN mkdir anagrammeur
+COPY liste_francais.txt anagrammeur/liste_francais.txt
 ENTRYPOINT java -jar /anagrammeur.jar
