--- a/anagrammeur/pom.xml
+++ b/anagrammeur/pom.xml
@@ -48,7 +48,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.0.0</version>
                 <configuration>
-                    <mainClass>anagrammeur.Anagrammeur</mainClass>
+                    <mainClass>anagrammeur.AnagrammeurApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
